--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ body {
     align-items: center;
 }
 
+.php {
+    display: block;
+}
+
 /* typeface */
 
 @font-face {
@@ -142,7 +146,7 @@ pre.textarea-toc {
     position: fixed;
     width: 720px;
     height: auto;
-    top: 20%;
+    top: 10%;
     left: 0;
     right: 0;
     margin: 5% auto; /* Will not center vertically and won't work in IE6/7. */
@@ -213,8 +217,9 @@ pre.textarea-toc {
 
 .ad-vertical {
     position: relative;
-    min-width: 266px;
+    min-width: 270px;
     min-height: 535px;
+    max-height: 100%;
 }
 
 .ad-horizontal {
