03/12 Connect frontend and backend
- Question update change by game_session
- add wine test

--- a/assets/game/2-flip-card-game-master/style.css
+++ b/assets/game/2-flip-card-game-master/style.css
@@ -34,6 +34,8 @@
   }
   .score-panel{
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
   h2{
     text-align: left;
