--- a/assets/game/2-flip-card-game-master/style.css
+++ b/assets/game/2-flip-card-game-master/style.css
@@ -4,24 +4,30 @@
     box-sizing: border-box;
   }
 
+  #startScreen{
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
   
-  /* body {
-    height: 100vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
+  .title{
+    /* transform: scale(0.45); */
+    width: 100%;
+    height:auto;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
+    padding-top: 100px;
     flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-    background: #ecf3f2;
-  } */
+    position: relative;
+  }
+  button{
+    border: 0px;
+    background-color: rgba(255, 255, 255, 0);
+    /* transform: scale(0.45); */
+    position: relative;
+  }
+
+
 
 
   #memory-game {
@@ -31,7 +37,7 @@
     display: flex;
     flex-wrap: wrap;
     perspective: 1000px;
-    outline: black 3px solid;
+    /* outline: black 3px solid; */
     display: none;
   }
   #score-panel{
@@ -41,16 +47,15 @@
   }
 
   #timer{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    display: inline;
+    align-content: start;
+    padding-left: 800px;
   }
   #count{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    display: inline;
+    align-content: end;  
+    padding-left: 10px;
+
   }
 
   #container{
@@ -58,7 +63,8 @@
     /* margin-top: 100px; */
     width: 892px;
     height: 535px;
-    outline: black 3px solid;
+    background-color: #ACA340;
+
 
   }
   #gameEnd{
@@ -103,4 +109,20 @@
   }
   .hide{
     display:none;
+ }
+ #gameEnd{
+   width: 100%;
+   height: 100%;
+   display: none;
+   flex-direction: column;
+   align-items: center;
+   position: relative;
+ }
+ #result{
+  width: 65%;
+  height:auto;
+ }
+ button#leave{
+   position: absolute;
+   bottom: 30px;
  }
