--- a/assets/game/10-wine-test/style.css
+++ b/assets/game/10-wine-test/style.css
@@ -9,6 +9,9 @@
     font-weight: normal;
     font-style: normal;
 }
+audio{
+    display:none;
+}
 body {
     position: relative;
     width: 892px;
