--- a/style.css
+++ b/style.css
@@ -239,9 +239,23 @@ div.btn-group-endgame {
     min-height: 535px;
     max-height: 100%;
 }
+#description{
+    display: flex;
+    flex-direction: column;
+    /* position: fixed; */
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin-bottom: 100px;
+    width: 695px;
+    /* height: 100px; */
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 1;
+}
 
 .ad-horizontal {
-    position: fixed;
+    /* position: fixed; */
     left: 0;
     right: 0;
     bottom: 0;
@@ -271,7 +285,7 @@ div.btn-group-endgame {
     justify-content: space-between;
     align-items: center;
     margin-top: 40px;
-    margin-bottom: 150px;
+    margin-bottom: 200px;
 }
 
 .game-frame {
