5/6 music debug and add font

--- a/assets/game/2-flip-card-game-master/style.css
+++ b/assets/game/2-flip-card-game-master/style.css
@@ -3,7 +3,14 @@
     margin: 0;
     box-sizing: border-box;
   }
+  @font-face {
+    font-family: Corporate-Logo-Rounded;
+    src: url(./cardImg/Corporate-Logo-Rounded.ttf);
+}
 
+h2{
+  font-family: Corporate-Logo-Rounded;
+}
   #startScreen{
     width: 100%;
     height: 100%;
