--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ body {
     /*font-family: ;
     font-weight: ;*/
 }
+body.gamepage {
+    margin-bottom: 150px;
+}
 body.hack_page {
     font-family: monospace;
     font-size: 20px;
@@ -255,7 +258,7 @@ div.btn-group-endgame {
 }
 
 .ad-horizontal {
-    /* position: fixed; */
+    position: fixed;
     left: 0;
     right: 0;
     bottom: 0;
@@ -285,7 +288,7 @@ div.btn-group-endgame {
     justify-content: space-between;
     align-items: center;
     margin-top: 40px;
-    margin-bottom: 200px;
+    /* margin-bottom: 200px; */
 }
 
 .game-frame {
@@ -297,6 +300,43 @@ div.btn-group-endgame {
     background-size: 52%;
     background-position: center center;
     background-repeat: no-repeat
+}
+
+/* #description {
+    display: block;
+    position: relative;
+    width: 892px;
+    margin-top: 20px;
+    padding: 12px;
+    background-color: #FFF;
+    border: 8px solid #F6CD63;
+    border-radius: 16px;
+}
+#description h3 {
+    font-size: 28px;
+    letter-spacing: 0.02em;
+    text-align: left;
+    margin-top: 2px;
+    margin-bottom: 4px;
+} */
+
+#description {
+    display: none;
+    position: fixed;
+    width: 560px;
+    height: max-content;
+    top: 10%;
+    left: 0;
+    right: 0;
+    margin: 5% auto; /* Will not center vertically and won't work in IE6/7. */
+    padding: 24px 32px;
+    background-color: white;
+    border: 12px solid #88E998;
+    border-radius: 16px;
+    z-index: 3;
+}
+#description h3 {
+    margin-bottom: 4px;
 }
 
 iframe {
@@ -395,6 +435,11 @@ div#hack-info {
     width: 100%;
     /*max-width: 100%;
     max-height: 100%;*/
+}
+.img-controls {
+    position: relative;
+    width: 24px;
+    height: 24px;
 }
 
 .img-game-thumbnail {
