--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ body {
     /*font-family: ;
     font-weight: ;*/
 }
+body.gamepage {
+    margin-bottom: 150px;
+}
 body.hack_page {
     font-family: monospace;
     font-size: 20px;
@@ -148,9 +151,17 @@ pre.textarea-toc {
     border: 2px solid #F6CD63;
     border-radius: 4px;
 
+    font-family: 'DotGothic16';
+    color: #F6CD63;
+    font-size: 20px;
     overflow-y: scroll;
     resize: none;
     white-space: pre-wrap;
+}
+pre.textarea-toc span {
+    font-size: 24px;
+    margin-top: 8px;
+    margin-bottom: 4px;
 }
 
 /* question modal */
@@ -255,7 +266,7 @@ div.btn-group-endgame {
 }
 
 .ad-horizontal {
-    /* position: fixed; */
+    position: fixed;
     left: 0;
     right: 0;
     bottom: 0;
@@ -285,7 +296,7 @@ div.btn-group-endgame {
     justify-content: space-between;
     align-items: center;
     margin-top: 40px;
-    margin-bottom: 200px;
+    /* margin-bottom: 200px; */
 }
 
 .game-frame {
@@ -297,6 +308,43 @@ div.btn-group-endgame {
     background-size: 52%;
     background-position: center center;
     background-repeat: no-repeat
+}
+
+/* #description {
+    display: block;
+    position: relative;
+    width: 892px;
+    margin-top: 20px;
+    padding: 12px;
+    background-color: #FFF;
+    border: 8px solid #F6CD63;
+    border-radius: 16px;
+}
+#description h3 {
+    font-size: 28px;
+    letter-spacing: 0.02em;
+    text-align: left;
+    margin-top: 2px;
+    margin-bottom: 4px;
+} */
+
+#description {
+    display: none;
+    position: fixed;
+    width: 560px;
+    height: max-content;
+    top: 10%;
+    left: 0;
+    right: 0;
+    margin: 5% auto; /* Will not center vertically and won't work in IE6/7. */
+    padding: 24px 32px;
+    background-color: white;
+    border: 12px solid #88E998;
+    border-radius: 16px;
+    z-index: 3;
+}
+#description h3 {
+    margin-bottom: 4px;
 }
 
 iframe {
@@ -395,6 +443,11 @@ div#hack-info {
     width: 100%;
     /*max-width: 100%;
     max-height: 100%;*/
+}
+.img-controls {
+    position: relative;
+    width: 24px;
+    height: 24px;
 }
 
 .img-game-thumbnail {
@@ -669,6 +722,26 @@ input.checkbox-signup {
 input.option {
     display: none;
 }
+.modal-question input[type=text] {
+    width: 100%;
+    height: 56px;
+    /* background-color: #FFF; */
+    background-color: #F0F8FD;
+    /* border: 4px solid #88E998; */
+    border: none;
+    border-radius: 8px;
+    margin-top: 4px;
+    margin-bottom: 8px;
+    padding: 2px 8px;
+
+    font-family: 'DotGothic16';
+    font-size: 28px;
+    color: #F6CD63;
+}
+.modal-question input[type=text]::placeholder {
+    color: rgba(136, 233, 152,0.6);
+}
+
 div.question-radio {
     margin: 4px 0px 12px;
 }
